prevent track name from overflowing in playback component

--- a/src/styles/Playback.css
+++ b/src/styles/Playback.css
@@ -17,7 +17,6 @@
 
 .playback-track {
     display: flex;
-    /* flex-direction: row; */
     gap: .5em;
 }
 
@@ -34,21 +33,26 @@
 .playback-info {
     display: flex;
     flex-direction: column;
-    font-size: 2em;
+    justify-content: center;
     font-weight: bold;
+    max-width: 480px;
 }
 
 .playback-info-name {
     color: rgba(255, 255, 255, .9);
+    font-size: 1.6em;
     font-weight: bold;
     transition: 200ms;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .playback-info-name:hover {
     color: rgba(255, 255, 255, .6);
 }
 
 .playback-info-artist {
-    font-size: .8em;
+    font-size: 1.4em;
     color: rgb(169, 169, 169);
     transition: 200ms;
 }
